<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClimaCast</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_zip_code_here_">Enter zip code here.</string>
    <string name="getButtonText">Get Weather!</string>
    <string name="tempf_label">Temp:</string>
    <string name="description_label">Current Condition:</string>
    <string name="humidity_label">Humidity:</string>
    <string name="wind_speed_label">Wind Speed:</string>
    <string name="wind_direction_label">Wind Direction:</string>
    <string name="description_image">Description Image</string>
    <string name="location">Location</string>
    <string name="amount_of_days_to_forcast">Amount of days to forcast</string>
    <string name="enter_a_valid_zip_code_">Enter a valid zip code.</string>
    <string name="please_enter_1_5_">Please enter 1-5!</string>
    <string name="weatherdesc">weatherDesc</string>
    <string name="save_favorite">Save Favorite</string>
    <string name="view_favorites">View Favorites</string>
    <string name="show_map">Show Map</string>
    <string name="show_on_map">Show on Map</string>
    <string name="high">High</string>
    <string name="date">Date</string>
    <string name="low">Low</string>
    <string name="conditions">Conditions</string>
    <string name="search">Search</string>
    <string name="compose">Compose</string>
    
    <string-array name="action_list">
        <item>Favorites</item>
        <item>Help</item>
    </string-array>
        <string name="about">This application was made by Derek Bertubin. \\n\\nWeather information provided by: \\nhttp://www.worldweatheronline.com</string>

</resources>
