<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="2"
            android:hint="@string/enter_zip_code_here_"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/startButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:paddingTop="20dip"
            android:text="@string/getButtonText" />
    </LinearLayout>

<GridLayout
        android:id="@+id/currentData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingLeft="10dip"
        android:paddingTop="10dip" >

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <TextView
            android:id="@+id/data_location"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label" />

        <TextView
            android:id="@+id/weatherDesc"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempf_label" />

        <TextView
            android:id="@+id/data_tempF"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label" />

        <TextView
            android:id="@+id/data_humidity"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed_label" />

        <TextView
            android:id="@+id/data_windSpeed"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ResultLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_direction_label" />

        <TextView
            android:id="@+id/data_windDirection"
            style="@style/ResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>

 

</LinearLayout>